--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,16 +27,7 @@ jobs:
         pip install -r requirements.txt
         pip install pyinstaller
 
-    - name: Debug installed packages
-      run: |
-        pip freeze
-
-    - name: Debug directory contents
-      run: |
-        python -c "import os, customtkinter; print(os.path.dirname(customtkinter.__file__))"
-        ls -R "$GITHUB_WORKSPACE/assets"
-
     - name: Build EXE with PyInstaller
       run: |
         $CUSTOMTKINTER_PATH = $(python -c "import customtkinter; print(customtkinter.__path__[0])")
-        pyinstaller --noconfirm --onefile --windowed --icon "$GITHUB_WORKSPACE/assets/sun.ico" --add-data "$CUSTOMTKINTER_PATH;customtkinter/" --add-data "$GITHUB_WORKSPACE/assets;assets/" "main.py"
+        echo $CUSTOMTKINTER_PATH
