--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,4 @@ jobs:
     - name: Build EXE with PyInstaller
       run: |
         echo $GITHUB_WORKSPACE
-        pyinstaller --noconfirm --onefile --windowed --icon "/assets/sun.ico" --add-data "/assets;assets/"  --add-data "$CUSTOMTKINTER_PATH;customtkinter/" "/main.py" 
-
+        pyinstaller --noconfirm --onefile --windowed --icon "./assets/sun.ico" --add-data "./assets;assets/"  --add-data "$CUSTOMTKINTER_PATH;customtkinter/" "./main.py"
