--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,11 @@ jobs:
     - name: Build EXE with PyInstaller
       run: |
         pyinstaller --noconfirm --onefile --windowed "main.py" 
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: dist/
+
+
